# ChatServer

./: .clang-format  CMakeLists.txt  README.md
config/: logger.config
src/: CMakeLists.txt  main.cpp
src/comm/: ClientCommunication.cpp  ClientCommunication.h  CommErrors.h  Communication.cpp  Communication.h  Transmission.cpp  Transmission.h
src/comm/trx/: CustomAction.hpp  CustomData.h  Transaction.h  TransactionBuilder.cpp  TransactionBuilder.h
src/comm/trx/action/: DisconnectClient.cpp  DisconnectClient.h  DisconnectClientPimpl.h
src/comm/trx/data/: AllClientsData.h  AllClientsDataPimpl.hpp  ClientToBeDisconnected.h
src/comm/trx/req/: ChatRequest.h  ChatTo.cpp  ChatTo.h  ChatUserListRequest.h  ChatUserName.cpp  ChatUserName.h  InvalidHeaderRequest.h  InvalidRequest.h  InvalidRequestDescription.h  InvalidXmlRequest.hpp  Request.cpp  Request.h  StatusNotificationRequest.cpp  StatusNotificationRequest.h
src/comm/trx/res/: ChatFrom.cpp  ChatFrom.h  ChatUserListResponse.cpp  ChatUserListResponse.h  CustomIdRecipientsResponse.hpp  CustomNameRecipientsResponse.hpp  GenericGreeting.cpp  GenericGreeting.h  GenericResponse.cpp  GenericResponse.h  Response.hpp  XmlPreamble.h
src/conf/: CmdLineArgsParser.hpp  CmdLineHelpFunction.hpp  LoggingConfig.cpp  LoggingConfig.h
src/core/: Connection.cpp  Connection.h  CoreErrors.h  Server.cpp  Server.h  SignalHandler.cpp  SignalHandler.h
src/db/: DatabaseErrors.h  DatabaseProxy.cpp  DatabaseProxy.hpp  Transaction.hpp
src/db/dao/: ErrorLogDao.cpp  ErrorLogDao.h
src/db/impl/: DatabaseProxyImpl.hpp  ErrorHandler.hpp  TransactionImpl.hpp  Types.h
src/models/: ChatStatus.hpp  ClientData.cpp  ClientData.h  ClientFwd.h  Clients.cpp  Clients.h  DataProvider.h
src/proc/: ChatMessageProcessor.cpp  ChatMessageProcessor.h  InvalidRequestProcessor.cpp  InvalidRequestProcessor.h  ProcErrors.h  RequestProcessor.cpp  RequestProcessor.h
src/utils/: Logging.hpp  Types.hpp
test/: CMakeLists.txt
test/comm/trx/: TransactionBuilderTest.cpp
test/comm/trx/req/: ChatToTests.cpp  ChatUserNameTests.cpp  RequestTests.cpp  StatusNotificationRequestTests.cpp
test/comm/trx/res/: ChatFromTests.cpp  ChatUserListResponseTests.cpp  CustomIdRecipientsResponseTests.cpp  CustomNameRecipientsResponseTests.cpp  GenericGreetingsTests.cpp  GenericResponseTests.cpp
test/db/: ErrorLogDaoTests.cpp
test/models/: ClientsTests.cpp
test/proc/: ChatMessageProcessorTests.cpp  InvalidRequestProcessorTest.cpp  RequestProcessorTests.cpp
test/spawn/: SpawnTests.cpp
test/testDoubles/models/: FakeClientData.h  FakeDataProvider.hpp
